Revert "Fix input/output board overflowing in very small screens"
This reverts commit 9c9135548299ab7b5f2dcd5ad51b384aa30c5f97.

--- a/style/style.css
+++ b/style/style.css
@@ -48,17 +48,12 @@ header > h1 {
 }
 
 .board-container {
-    flex: 1 1;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 0;
-}
-
-.board-container > canvas {
-    min-width: 0;
-    flex: 1 1;
 }
 
 #arrowParent {
